fixed alignment on infotext containers

--- a/style/style.scss
+++ b/style/style.scss
@@ -66,6 +66,7 @@ body {
 
         .infoTextContainer {
           width: 80%;
+          height: 68px;
           text-align: center;
 
           p {
